--- a/src/FilesSafeReserve.UI/Components/Pages/CopySafePage/CopySafePage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/CopySafePage/CopySafePage.razor.css
@@ -141,7 +141,16 @@
     align-items: center;
 }
 
+.alert-container {
+    width: 90%;
+    margin: 20px;
+}
+
 @media (max-width: 855px) {
+    .alert-container {
+        font-size: small;
+    }
+
     .virtual-safe-name-container {
         font-size: small;
     }
