--- a/src/FilesSafeReserve.UI/Components/Pages/ReservationPage/ReservationPage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/ReservationPage/ReservationPage.razor.css
@@ -170,6 +170,16 @@
     margin-bottom: 10px;
 }
 
+.watchers-alert-container {
+    width: 90%;
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 855px) {
     .reservation-element-container {
         font-size: small;
@@ -185,6 +195,10 @@
     }
 
     .alert-container {
+        font-size: small;
+    }
+
+    .watchers-alert-container {
         font-size: small;
     }
 }
