--- a/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
+++ b/src/FilesSafeReserve.UI/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
@@ -209,8 +209,16 @@
     grid-column-gap: 30px;
     grid-row-gap: 10px;
 }
+.alert-container {
+    width: 90%;
+    margin: 20px;
+}
 
 @media (max-width: 855px) {
+    .alert-container {
+        font-size: small;
+    }
+
     .btns-container {
         flex-direction: column;
     }
